# Blog-api-with-caching

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  schema.yaml  start.prod.sh  start.sh
core/: settings.py  urls.py
deploy/: nginx.template.conf
docs/: architecture.md  schema.yml
identity/: admin.py  apps.py  models.py
identity/migrations/: 0001_initial.py
posts/: admin.py  apps.py  cached.py  models.py  serializers.py  services.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_options_alter_post_image.py
posts/tests/: conftest.py  test_cache.py
