[project]
name = "Blog_api_with_caching"
version = "0.1.0"
description = "Blog API with caching of posts"
authors = [
    {name = "Tychin Denis"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "django-health-check (>=4.2.1,<5.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "djangorestframework (>=3.17.0,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "drf-standardized-errors (>=0.15.0,<0.16.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "django-debug-toolbar (>=6.2.0,<7.0.0)",
    "django-query-counter (>=0.5.0,<0.6.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-structlog (>=10.0.0,<11.0.0)",
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
